Updated All device UI

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -66,7 +66,17 @@
       
 
             <!-- CSS -->
+            <style>
 
+                .footer[b-9jpqodmd63] {
+                    position: absolute;
+                    bottom: revert-layer;
+                    width: 100%;
+                    white-space: nowrap;
+                    line-height: 60px;
+
+                }
+            </style>
            
             <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 
@@ -98,7 +108,7 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted" style="padding-top: 20px; background-color: darkviolet; ">
+    <footer class="border-top footer text-muted" style="padding-top: 20px;padding-bottom: -25px; background-color: darkviolet; ">
         <div class="container">
             <div class="inner container">
                 <div class="row">
@@ -108,7 +118,7 @@
                         <p class="mx-auto text-center mb-0" style="color: white; font: bold">&copy; 2024 QuickFix.</p>
                     </div>
 
-                    <div   class="col-lg-4 col-md-12">
+                    <div style="padding-top: -10px"; class="col-lg-4 col-md-12">
                         <nav class="nav nav-mastfoot justify-content-center" >
                             <a style="color:  wheat" class="nav-link" href="#">
                                 <i style="  " class="fab fa-facebook-f"></i>
