--- a/Views/Workers/Details.cshtml
+++ b/Views/Workers/Details.cshtml
@@ -10,12 +10,9 @@
     <h4>Worker</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ProfilePic_Id)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ProfilePic_Id)
-        </dd>
+        <!-- Profile Image -->
+        <dt class="col-sm-2">            Profile Image         </dt>
+        <dd class="col-sm-10"><img src="@Model.ProfilePic_Id" alt="Profile Image" style="max-width: 200px;" /></dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Name)
         </dt>
