--- a/Views/Bookings/create.cshtml
+++ b/Views/Bookings/create.cshtml
@@ -27,7 +27,8 @@
 
             <div class="form-group">
                 <label asp-for="CustomerName" class="control-label"></label>
-                <input asp-for="CustomerName" class="form-control" />
+              <!--  <input asp-for="CustomerName" class="form-control" /> -->
+                <input asp-for="CustomerName" class="form-control" value="@ViewData["CustomerName"]" readonly />
                 <span asp-validation-for="CustomerName" class="text-danger"></span>
             </div>
 
