--- a/Views/Bookings/create.cshtml
+++ b/Views/Bookings/create.cshtml
@@ -31,6 +31,21 @@
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
+            <div class="form-group form-check">
+
+                <label class="form-check-label">
+
+                    <input class="form-check-input" asp-for="AgreeToTerms" /> @Html.DisplayNameFor(model => model.AgreeToTerms)
+
+                </label>
+
+                <span asp-validation-for="AgreeToTerms" class="text-danger"></span> <br>
+                <a asp-controller="Bookings" asp-action="TermsNCond">Terms and Condition</a>
+
+            </div>
+            <div>
+                <a asp-controller="Workers" asp-action="Index" asp-route-serviceId="@ViewData["Service_Id"]">Back To List</a>
+            </div>
         </form>
     </div>
 </div>
@@ -44,9 +59,9 @@
 
     <!--<a asp-action="Index">Back to List</a>-->
     <!--<a asp-action="../Workers/Index">Back To List</a>-->
-    <div>
+    <!--<div>
         <a asp-controller="Workers" asp-action="Index" asp-route-serviceId="@ViewData["Service_Id"]">Back To List</a>
-    </div>
+        </div>-->
 
     <script>
         document.addEventListener("DOMContentLoaded", function () {
