--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -30,6 +30,9 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="AppRoles" asp-action="Index">Role</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Review" asp-action="Create"></a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                         <li class="nav-item">
@@ -103,40 +106,7 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted" style="padding-top: 20px;padding-bottom: -25px; background-color: darkviolet; ">
-        <div class="container">
-            <div class="inner container">
-                <div class="row">
-                    <div class="col-lg-4 col-md-12 d-flex align-items-center">
-                    </div>
-                    <div class="col-lg-4 col-md-12 d-flex align-items-center">
-                        <p class="mx-auto text-center mb-0" style="color: white; font: bold">&copy; 2024 QuickFix.</p>
-                    </div>
-
-                    <div style="padding-top: -10px"; class="col-lg-4 col-md-12">
-                        <nav class="nav nav-mastfoot justify-content-center" >
-                            <a style="color:  wheat" class="nav-link" href="#">
-                                <i style="  " class="fab fa-facebook-f"></i>
-                            </a>
-                            <a style="color:  wheat" class="nav-link" href="#">
-                                <i class="fab fa-twitter"></i>
-                            </a>
-                            <a style="color:  wheat" class="nav-link" href="#">
-                                <i class="fab fa-instagram"></i>
-                            </a>
-                            <a style="color:  wheat" class="nav-link" href="#">
-                                <i class="fab fa-linkedin"></i>
-                            </a>
-                            <a style="color:  wheat" class="nav-link" href="#">
-                                <i class="fab fa-youtube"></i>
-                            </a>
-                        </nav>
-                    </div>
-
-                </div>
-            </div>
-        </div>
-    </footer>
+   
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
    
