--- a/Areas/Identity/Pages/Account/Register1.cshtml
+++ b/Areas/Identity/Pages/Account/Register1.cshtml
@@ -12,6 +12,7 @@
             <h2>Create a new account.</h2>
             <hr />
             <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
+
             <div class="form-floating mb-3">
                 <input asp-for="Input.Firstname" class="form-control" autocomplete="username" aria-required="true" placeholder="name@example.com" />
                 <label asp-for="Input.Firstname">first name</label>
@@ -29,16 +30,41 @@
                 <label asp-for="Input.Email">Email</label>
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
             </div>
+
             <div class="form-floating mb-3">
                 <input asp-for="Input.Password" class="form-control" autocomplete="new-password" aria-required="true" placeholder="password" />
                 <label asp-for="Input.Password">Password</label>
                 <span asp-validation-for="Input.Password" class="text-danger"></span>
             </div>
+
             <div class="form-floating mb-3">
                 <input asp-for="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" placeholder="password" />
                 <label asp-for="Input.ConfirmPassword">Confirm Password</label>
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
+            <!-- Buton or link to collect workers location -->
+            @* <div>
+                To add your working location, Click here:<strong>(It grabs your current location)</strong><br />
+                <button onclick="getLocation()">Click here</button>
+                <p id="demo"></p> 
+                <script>
+                    const x = document.getElementById("demo");
+
+                    function getLocation() {
+                        if (navigator.geolocation) {
+                            navigator.geolocation.getCurrentPosition(showPosition);
+                        } else {
+                            x.innerHTML = "Geolocation is not supported by this browser.";
+                        }
+                    }
+
+                    function showPosition(position) {
+                        x.innerHTML = "Latitude: " + position.coords.latitude +
+                            "<br>Longitude: " + position.coords.longitude;
+                    }
+                </script>
+            </div> *@
+
             <div class="form-floating mb-3">
                 <select asp-for="Input.Role" asp-items="@Model.Input.RoleList" class="form-select" aria-required="true"  
                         style="display: none;">
@@ -49,6 +75,7 @@
 
                 <span asp-validation-for="Input.Role" class="text-danger"></span>
             </div>
+
             <div class="form-floating mb-3">
                 <select asp-for="Input.Role" asp-items="@Model.Input.RoleList" class="form-select" aria-required="true" style="display: none;">
                     <option disabled selected>Select Role</option>
@@ -58,9 +85,12 @@
 
                 <span asp-validation-for="Input.Role" class="text-danger"></span>
             </div>
+
             <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Register</button>
+
         </form>
     </div>
+    
     <div class="col-md-6 col-md-offset-2">
         <section>
             <h3>Use another service to register.</h3>
