--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
 <html lang="en">
 
 <head>
-    <script>
+    @* <script>
         const x = document.getElementById("demo");
         window.onload = function () {
             //alert("hello");
@@ -32,7 +32,7 @@
             }
 
         }
-    </script>
+    </script> *@
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
