--- a/Views/Workers/Index.cshtml
+++ b/Views/Workers/Index.cshtml
@@ -2,8 +2,8 @@
 
 @{
     ViewData["Title"] = "Index";
-    var latitude = 43.683334;
-    var longitude = -79.766670;
+    //var latitude = 43.683334;
+    //var longitude = -79.766670;
 }
 
 <h1>Index</h1>
@@ -23,7 +23,7 @@
         <strong>Sort by:</strong>
         <a asp-action="Index" asp-route-serviceId="@ViewData["ServiceId"]" asp-route-sortOrder="@ViewData["PriceSortParam"]">Price</a> |
         <a asp-action="Index" asp-route-serviceId="@ViewData["ServiceId"]" asp-route-sortOrder="@ViewData["RatingSortParam"]">Ratings</a> | 
-        <a id="locationTag" asp-action="Index" asp-route-serviceId="@ViewData["ServiceId"]" asp-route-sortOrder="@ViewData["LocationSortParam"]" asp-route-latitude="@latitude" asp-route-longitude="@longitude">Current Location</a>
+        @* <a id="locationTag" asp-action="Index" asp-route-serviceId="@ViewData["ServiceId"]" asp-route-sortOrder="@ViewData["LocationSortParam"]" asp-route-latitude="@latitude" asp-route-longitude="@longitude">Current Location</a> *@
 
         @* <script>
             latitude = sessionStorage.getItem("latitude");
