--- a/Areas/Identity/Pages/Account/Register1.cshtml
+++ b/Areas/Identity/Pages/Account/Register1.cshtml
@@ -49,14 +49,8 @@
 
                 <span asp-validation-for="Input.Role" class="text-danger"></span>
             </div>
-            <div class="form-floating mb-3">
-                <select asp-for="Input.Role" asp-items="@Model.Input.RoleList" class="form-select" aria-required="true" style="display: none;">
-                    <option disabled selected>Select Role</option>
-                </select>
-
-
-
-                <span asp-validation-for="Input.Role" class="text-danger"></span>
+            <div class="mb-3">
+                <input type="hidden" name="Input.Role" value="Worker" />
             </div>
             <button  id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Register</button>
         </form>
