--- a/Views/Workers/Index.cshtml
+++ b/Views/Workers/Index.cshtml
@@ -4,6 +4,9 @@
     ViewData["Title"] = "Index";
 }
 
+<!--If the menu dropdown doesn't work copy paste the lines below this to the html pages that doesnt work with dropdown-->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 
 <h1>Index</h1>
 
