--- a/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
@@ -12,4 +12,8 @@
     }
     <li class="nav-item"><a class="nav-link @ManageNavPages.TwoFactorAuthenticationNavClass(ViewContext)" id="two-factor" asp-page="./TwoFactorAuthentication">Two-factor authentication</a></li>
     <li class="nav-item"><a class="nav-link @ManageNavPages.PersonalDataNavClass(ViewContext)" id="personal-data" asp-page="./PersonalData">Personal data</a></li>
+    @* <li class="nav-item"><a id="history" asp-page="/Bookings/Index">History</a></li> *@
+    <li class="nav-item"><a asp-controller="Bookings" asp action="Index">History</a></li>
+    @* <li class="nav-item"><a asp-controller="Invoice" asp-action="Index">Invoices</a></li> *@
 </ul>
+@* class="nav-link @ManageNavPages.PersonalDataNavClass(ViewContext)" *@
