--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -45,7 +45,34 @@ else
                 <a id="manage" class="nav-link dropdown-toggle text-dark" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                     Hello @UserManager.GetUserName(User)!
                 </a>
-                <ul class="dropdown-menu">
+                @if ((User.IsInRole("Worker")) || (User.IsInRole("Admin")))
+                {
+                    <ul class="dropdown-menu">
+                        <li>
+                            <a class="dropdown-item" asp-area="Identity" asp-page="/Account/Manage/Index">Dashboard</a>
+                            <a class="dropdown-item" asp-area="Identity" asp-page="/Account/Manage/Business">Business</a>
+                        </li>
+                        <li>
+                            <form id="logoutForm" class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
+                                <button id="logout" type="submit" class="dropdown-item">Logout</button>
+                            </form>
+                        </li>
+                    </ul>
+                }
+                else
+                {
+                    <ul class="dropdown-menu">
+                        <li>
+                            <a class="dropdown-item" asp-area="Identity" asp-page="/Account/Manage/Index">Profile</a>
+                        </li>
+                        <li>
+                            <form id="logoutForm" class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
+                                <button id="logout" type="submit" class="dropdown-item">Logout</button>
+                            </form>
+                        </li>
+                    </ul>
+                }
+                @* <ul class="dropdown-menu">
                     <li>
                         <a class="dropdown-item" asp-area="Identity" asp-page="/Account/Manage/Index">Profile</a>
                     </li>
@@ -54,7 +81,7 @@ else
                             <button id="logout" type="submit" class="dropdown-item">Logout</button>
                         </form>
                     </li>
-                </ul>
+                </ul> *@
             </li>
         }
         else
